--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+melodic-nornet (1.1.8-1ubuntu1) hirsute; urgency=medium
+
+  * New upstream release.
+  * debian/control: Updated standards version to 4.6.2.
+
+ -- Thomas Dreibholz <thomas.dreibholz@gmail.com>  Wed, 08 Feb 2023 11:45:49 +0100
+
 melodic-nornet (1.1.7-1ubuntu1) hirsute; urgency=medium
 
   * New upstream release.
