--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (1.1.9~rc1-1ubuntu1) hirsute; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Dreibholz <thomas.dreibholz@gmail.com>  Wed, 15 Nov 2023 10:52:49 +0100
+
 melodic-nornet (1.1.8-1ubuntu1) hirsute; urgency=medium
 
   * New upstream release.
