--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+melodic-nornet (1.2.0-1ubuntu1) oracular; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Dreibholz <thomas.dreibholz@gmail.com>  Sat, 14 Dec 2024 15:39:32 +0100
+
 melodic-nornet (1.1.9-1ubuntu1) hirsute; urgency=medium
 
   * New upstream release.
